//
// Copyright 2019 ZetaSQL Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

// This proto has an extension to a TestSchema proto, but is not linked into
// the same build target.  This is intended so we can have tests that use
// extensions that come from different DescriptorPools.

syntax = "proto2";

package zetasql_test;

import "google/protobuf/descriptor.proto";
import "zetasql/testdata/test_schema.proto";

message ExternalExtension {
  extend TestExtraPB {
    optional ExternalExtension field = 10323131;
  }
}

extend google.protobuf.EnumValueOptions {
  optional int32 external_top_level_ext = 254852986;
}
